# xmlreader

./: Cargo.toml  README.md  sample.xml
.github/workflows/: rust.yml
examples/: delicious_food.rs
src/: lib.rs
