[package]
name = "xmlreader"
description = "XML Stream Reader"
version = "0.1.0"
edition = "2021"
authors = ["gwenn"]
keywords = ["xml"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/gwenn/xmlreader"

[badges]
maintenance = { status = "experimental" }

[dependencies]
xmlparser = "0.13.5"
